# SentinelX

./: .gitignore  CHANGELOG.md  CLI_ENHANCEMENT_SUMMARY.md  COMMIT_READY.md  Dockerfile  Dockerfile.sandbox  LICENSE  PHASE2_COMPLETION.md  PHASE2_COMPLETION_REPORT.md  PHASE4_CLEANUP_REPORT.md  PHASE4_COMPLETION_REPORT.md  PHASE5_1_COMPLETION_REPORT.md  PHASE5_IMPLEMENTATION_PLAN.md  PROJECT_COMPLETION_FINAL.md  PROJECT_COMPLETION_PLAN.md  PROJECT_ORGANIZATION.md  PROJECT_STATUS_CRITICAL_REVIEW.md  README.md  SENTINELX_ASCII.txt  SENTINELX_MASTER_PROMPT.md  VALIDATION_TESTING_NOTE.md  basic_workflow.yaml  config.yaml.example  debug_tasks.py  docker-compose.yml  pyproject.toml  pytest.ini  quick_test.sh  requirements.txt  setup.py  test_code.php  test_contract.sol  test_imports.py  test_llm_params.yaml  test_phase4_workflow.yaml  test_vulnerable.php  test_vulnerable_code.txt  test_web_api.py  test_workflow.py  validate_phase2.py  (+2 more)
dev/: README.md
dev/validation/: social_eng_old.py
docs/: ADVANCED_FEATURES.md  API_REFERENCE.md  BNB_CHAIN_GUIDE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  FAQ.md  LATERAL_MOVEMENT_TOOLKIT.md  PWN_TOOLKIT.md  README.md  SOCIAL_ENGINEERING_TOOLKIT.md  TASK_REFERENCE.md  USER_GUIDE.md
examples/: README.md  basic_task.py  bnb_chain_examples.py  custom_task_example.py  requirements.txt  smart_contract_audit.py
examples/workflows/: audit_workflow.yaml  pentest_workflow.yaml
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/components/: Dashboard.tsx  Reports.tsx  TaskExecution.tsx  WorkflowManager.tsx
frontend/src/services/: apiService.ts  websocketService.ts
scripts/: quick_test.sh  release.sh
sentinelx/: cli.py
sentinelx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
sentinelx/ai/: adversarial.py  llm_assist.py
sentinelx/audit/: cvss.py  smart_contract.py  web2_static.py
sentinelx/blockchain/: bnb.py  monitor.py  replay.py  rwascan.py
sentinelx/cli/: workflow.py
sentinelx/core/: context.py  registry.py  task.py  utils.py  workflow.py
sentinelx/deployment/: __init__.py
sentinelx/exploit/: __init__.py  binary_pwn.py  exploit_gen.py  fuzzing.py  heap_exploit.py  pwn_toolkit.py  rop_exploit.py  shellcode.py
sentinelx/forensic/: chain_ir.py  disk.py  memory.py
sentinelx/performance/: __init__.py
sentinelx/redteam/: __init__.py  c2.py  lateral_move.py  social_eng.py  social_eng_new.py
sentinelx/reporting/: __init__.py
sentinelx/reporting/templates/: base_report.html
sentinelx/threatmodel/: diagrams.py  model.py
sentinelx/web/: __init__.py  app.py  connection_manager.py  models.py
tests/: conftest.py  test_bnb_chain.py  test_cli.py  test_docker.py  test_exploit_modules.py  test_missing_functions.py  test_performance.py  test_reporting.py
tests/core/: test_context.py  test_registry.py  test_task.py
